<resources>
    <string name="app_name" translatable="false">Live Love Cité</string>
    <string name="facebook_app_id" translatable="false">1579345832392890</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1579345832392890</string>
    <string name="email">Email</string>
    <string-array name="maison_arrays" translatable="false">
        <item>@string/maison_prompt</item>
        <item>"Collège d'Espagne"</item>
        <item>Collège Franco-britannique</item>
        <item>Collège néerlendais</item>
        <item>Donation HARAUCOURT</item>
        <item>Fondation ABREU DE GRANCHER</item>
        <item>Fondation Argentine</item>
        <item>Fondation Avicenne</item>
        <item>Fondation BIERMANS-LAPÔTRE</item>
        <item>Fondation danoise</item>
        <item>Fondation de Monaco</item>
        <item>Fondation des États-Unis</item>
        <item>Fondation DEUTSCH DE LA MEURTHE</item>
        <item>Fondation hellénique</item>
        <item>Fondation Lucien PAYE</item>
        <item>Fondation suisse</item>
        <item>Fondation Victor LYON</item>
        <item>"Maison de l'Asie du Sud Est"</item>
        <item>"Maison de l’Île-de-France"</item>
        <item>"Maison de l'Inde"</item>
        <item>"Maison de l'Italie"</item>
        <item>Maison de la Tunisie</item>
        <item>Maison de Norvège</item>
        <item>Maison des Élèves Ingénieurs Arts et Métiers</item>
        <item>Maison des Étudiants Arméniens</item>
        <item>Maison des Étudiants Canadiens</item>
        <item>Maison des Étudiants Suédois</item>
        <item>Maison des Industries Agricoles et Alimentaires</item>
        <item>Maison des Provinces de France</item>
        <item>Maison du Brésil</item>
        <item>Maison du Cambodge</item>
        <item>Maison du Japon</item>
        <item>Maison du Liban</item>
        <item>Maison du Maroc</item>
        <item>Maison du Mexique</item>
        <item>Maison du Portugal - André de GOUVEIA</item>
        <item>Maison HEINRICH HEINE</item>
        <item>Maison Internationale AgroParisTech (MINA)</item>
        <item>Pavillon Administratif</item>
        <item>Résidence André HONNORAT</item>
        <item>Résidence Lila</item>
        <item>Résidence Quai de la Loire</item>
        <item>Résidence Robert GARRIC</item>
        <item>Not a Resident</item>
    </string-array>
    <string-array name="maison_arrays_mylocation" translatable="false">
        <item>@string/startpoint_prompt</item>
        <item>"Collège d'Espagne"</item>
        <item>Collège Franco-britannique</item>
        <item>Collège néerlendais</item>
        <item>Donation HARAUCOURT</item>
        <item>Espace Sud</item>
        <item>Fondation ABREU DE GRANCHER</item>
        <item>Fondation Argentine</item>
        <item>Fondation Avicenne</item>
        <item>Fondation BIERMANS-LAPÔTRE</item>
        <item>Fondation danoise</item>
        <item>Fondation de Monaco</item>
        <item>Fondation des États-Unis</item>
        <item>Fondation DEUTSCH DE LA MEURTHE</item>
        <item>Fondation hellénique</item>
        <item>Fondation Lucien PAYE</item>
        <item>Fondation suisse</item>
        <item>Fondation Victor LYON</item>
        <item>Grande Pelouse</item>
        <item>Jardin du Monde</item>
        <item>"L'Oblique"</item>
        <item>Le Vélo Volant</item>
        <item>"Maison de l'Asie du Sud Est"</item>
        <item>"Maison de l’Île-de-France"</item>
        <item>"Maison de l'Inde"</item>
        <item>"Maison de l'Italie"</item>
        <item>Maison de la Tunisie</item>
        <item>Maison de Norvège</item>
        <item>Maison des Élèves Ingénieurs Arts et Métiers</item>
        <item>Maison des Étudiants Arméniens</item>
        <item>Maison des Étudiants Canadiens</item>
        <item>Maison des Étudiants Suédois</item>
        <item>Maison des Industries Agricoles et Alimentaires</item>
        <item>Maison des Provinces de France</item>
        <item>Maison du Brésil</item>
        <item>Maison du Cambodge</item>
        <item>Maison du Japon</item>
        <item>Maison du Liban</item>
        <item>Maison du Maroc</item>
        <item>Maison du Mexique</item>
        <item>Maison du Portugal - André de GOUVEIA</item>
        <item>Maison HEINRICH HEINE</item>
        <item>Maison Internationale</item>
        <item>Maison Internationale AgroParisTech (MINA)</item>
        <item>Résidence André HONNORAT</item>
        <item>Résidence Lila</item>
        <item>Résidence Quai de la Loire</item>
        <item>Résidence Robert GARRIC</item>
        <item>Théâtre de la Cité</item>
        <item>Ancien Résident</item>
    </string-array>
    <string-array name="locations_array" translatable="false">
        <item>@string/select_location</item>
        <item>"Collège d'Espagne"</item>
        <item>Collège Franco-britannique</item>
        <item>Collège néerlendais</item>
        <item>Donation HARAUCOURT</item>
        <item>Espace Sud</item>
        <item>Fondation ABREU DE GRANCHER</item>
        <item>Fondation Argentine</item>
        <item>Fondation Avicenne</item>
        <item>Fondation BIERMANS-LAPÔTRE</item>
        <item>Fondation danoise</item>
        <item>Fondation de Monaco</item>
        <item>Fondation des États-Unis</item>
        <item>Fondation DEUTSCH DE LA MEURTHE</item>
        <item>Fondation hellénique</item>
        <item>Fondation Lucien PAYE</item>
        <item>Fondation suisse</item>
        <item>Fondation Victor LYON</item>
        <item>Grande Pelouse</item>
        <item>Jardin du Monde</item>
        <item>"L'Oblique"</item>
        <item>Le Vélo Volant</item>
        <item>"Maison de l'Asie du Sud Est"</item>
        <item>"Maison de l’Île-de-France"</item>
        <item>"Maison de l'Inde"</item>
        <item>"Maison de l'Italie"</item>
        <item>Maison de la Tunisie</item>
        <item>Maison de Norvège</item>
        <item>Maison des Élèves Ingénieurs Arts et Métiers</item>
        <item>Maison des Étudiants Arméniens</item>
        <item>Maison des Étudiants Canadiens</item>
        <item>Maison des Étudiants Suédois</item>
        <item>Maison des Industries Agricoles et Alimentaires</item>
        <item>Maison des Provinces de France</item>
        <item>Maison du Brésil</item>
        <item>Maison du Cambodge</item>
        <item>Maison du Japon</item>
        <item>Maison du Liban</item>
        <item>Maison du Maroc</item>
        <item>Maison du Mexique</item>
        <item>Maison du Portugal - André de GOUVEIA</item>
        <item>Maison HEINRICH HEINE</item>
        <item>Maison Internationale</item>
        <item>Maison Internationale AgroParisTech (MINA)</item>
        <item>Résidence André HONNORAT</item>
        <item>Résidence Lila</item>
        <item>Résidence Quai de la Loire</item>
        <item>Résidence Robert GARRIC</item>
        <item>Théâtre de la Cité</item>
    </string-array>
    <string name="name">Name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number_optional">Mobile Number (hidden)</string>
    <string name="loading">Loading…</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="about_us">About Us</string>
    <string name="go_to">Go To</string>
    <string name="signup">Signup</string>
    <string name="my_house">My House</string>
    <string name="home">Feeds</string>
    <string name="share">Share</string>
    <string name="finsih">Finish</string>
    <string name="change_password">Change Password</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="bug_report">Bug Report</string>
    <string name="delete_account">Delete Account</string>
    <string name="nationality_prompt">Select Nationality</string>
    <string name="maison_prompt">Choose your House</string>
    <string name="activities"><![CDATA[Courses & Activities]]></string>
    <string name="more">More</string>
    <string name="i_have_read_and_agree_to_terms_and_conditions" translatable="false">I have read and agree to Terms and Conditions</string>
    <string name="library">Library</string>
    <string name="sports">Sports</string>
    <string name="resident_initiatives">Resident Initiatives</string>
    <string name="save">Save</string>
</resources>