<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@drawable/bg"
                android:orientation="vertical"
                tools:context="fr.livelovecite.login.CompleteProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:background="@color/backgroundTransparent"
        android:padding="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/emailField"
                android:hint="@string/email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/maison_arrays"
            android:prompt="@string/maison_prompt"
            android:id="@+id/houseList"
            android:spinnerMode="dialog"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_outline"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/mobileField"
                android:hint="@string/mobile_number_optional"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/countriesList"
            android:prompt="@string/nationality_prompt"
            android:id="@+id/nationalityList"
            android:spinnerMode="dialog"
            android:background="@drawable/button_outline"
            android:padding="8dp"
            android:layout_marginTop="8dp"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_marginTop="16dp"
            android:text="@string/i_have_read_and_agree_to_terms_and_conditions"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textStyle="normal|italic"
            android:textAllCaps="false"
            android:textAlignment="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finsih"
            android:ems="8"
            android:id="@+id/finishBTN"
            android:background="@drawable/button_outline"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />
    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar_translucent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
</RelativeLayout>
