<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/relativeLayout"
                android:clickable="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundTransparent"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/nameField"
                    android:hint="@string/name"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/maison_arrays"
                android:prompt="@string/maison_prompt"
                android:id="@+id/houseList"
                android:spinnerMode="dialog"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_outline"
                android:padding="8dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="4dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/emailField"
                    android:hint="@string/email"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_marginTop="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white" >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/passwordField"
                    android:hint="@string/new_password"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_marginTop="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white" >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/passwordConfirmField"
                    android:hint="@string/confirm_password"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_marginTop="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/countriesList"
                android:prompt="@string/nationality_prompt"
                android:id="@+id/nationalityList"
                android:spinnerMode="dialog"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:background="@drawable/button_outline"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="4dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/mobileField"
                    android:hint="@string/mobile_number_optional"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_marginTop="8dp"/>
            </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:text="I have read and agree to Terms and Conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="16dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/registerButton"
                android:background="@drawable/button_outline"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
