<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fr.livelovecite.userprofile.EditProfileActivity">

    <Button
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/backBTN"
        android:tint="@android:color/white"
        android:background="@android:color/transparent"
        android:layout_marginRight="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/my_toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_below="@id/my_toolbar"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/default_user_icon"
            app:border_color="@android:color/white"
            app:border_width="2dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/houseField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/loading"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/loading"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/nameField"
                android:hint="@string/name"
                android:textColor="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/countriesList"
            android:prompt="@string/nationality_prompt"
            android:id="@+id/nationalityList"
            android:spinnerMode="dialog"
            android:padding="8dp"
            android:layout_marginTop="8dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/mobileField"
                android:hint="@string/mobile_number_optional"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="8dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/forgotpassword"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            android:textStyle="italic"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/updateBTN"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_outline_primary"
            android:layout_marginTop="18dp"/>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteAccountBTN"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/backBTN"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delete_account"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_toolbar_translucent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

</RelativeLayout>
